--- a/index.html
+++ b/index.html
@@ -742,7 +742,7 @@ contribute high-quality graphics that up to the latest trend.
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
-                  <img src="./assets/images/Photo3.jpg" alt="summary" loading="lazy">
+                  <img src="./assets/images/photo3.jpg" alt="summary" loading="lazy">
                 </figure>
 
                 <h3 class="project-title">Freelance Photography</h3>
@@ -760,7 +760,7 @@ contribute high-quality graphics that up to the latest trend.
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
-                  <img src="./assets/images/Photo4.jpg" alt="summary" loading="lazy">
+                  <img src="./assets/images/photo4.jpg" alt="summary" loading="lazy">
                 </figure>
 
                 <h3 class="project-title">Freelance Photography</h3>
